...
    <string name="empty_list_description">"Add an app from the app list and it will show up here"</string>
    <string name="add_link">Add Link</string>
    <string name="add_from_link">Add from Link</string>
    <string name="app_link_provided_message">Copy/paste the RESPECT app link provided by the app developer</string>
    <string name="error_link_message">"ERROR: Invalid link. Please check the URL and try again."</string>
...
    <string name="end_date_label">End date</string>
    <string name="example_url_placeholder">e.g. https://</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="qr_or_password_required">QR code badge or password required</string>
    <string name="password_not_set_error">Password is required before saving</string>
    <string name="done">Done</string>
    <string name="try_it">Try it</string>
    <string name="add_app">Add to school apps</string>
    <string name="google_play">Get it on Google Play</string>
    <string name="lessons">Lessons</string>
    <string name="apps">Apps</string>
    <string name="home">Home</string>
    <string name="app">App</string>
...
    <string name="enter_link">Enter link</string>
    <string name="add">Add</string>
    <string name="apps_detail">App detail</string>
    <string name="lesson_list">Lesson List</string>
    <string name="search">Search</string>
    <string name="app_name">App name</string>
    <string name="score_or_progress">Score or Progress</string>
    <string name="play">Play</string>
    <string name="install">Install</string>
    <string name="download">Download</string>
    <string name="downloaded">Downloaded</string>
    <string name="share">Share</string>
    <string name="assign">Assign</string>
...
    <string name="invalid_url">Invalid app Url</string>
    <string name="loading">Loading</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="all">All</string>
    <string name="active">Active</string>
...
    <string name="network_powered_by">Network powered by:</string>
    <string name="enter_invite_code_message">Enter the code provided by your teacher or school admin</string>
    <string name="invite_code_label">Invite code</string>
    <string name="enter_code_label">Enter invite code</string>
    <string name="invalid_invite_code">Invalid code, try again</string>
    <string name="already_have_account">I already have an account</string>
    <string name="add_my_school">Add my school</string>
    <string name="required_field">Required field</string>
    <string name="enter_one_field">If you need response, one of the field is required</string>
    <string name="login">Login</string>
    <string name="userId_placeholder">user@school.example.org</string>
    <string name="password_label">Password</string>

    <string name="qr_badge_options">QR Badge Options</string>
...
    <string name="task_image">Task Image</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="invitation">Invitation</string>
    <string name="invitation_for">Invitation for:</string>
    <string name="congratulation">Congratulations</string>
...
    <string name="i_am_student">I’m a Student</string>
    <string name="i_am_parent">I’m a Parent</string>
    <string name="accept">Accept</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="your_profile_title">Your profile</string>
    <string name="your_name_label">Your name</string>
    <string name="your_gender_label">Your gender</string>
...
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="create_account">Create account</string>
    <string name="username_label">Username</string>
    <string name="qr_code_badge">QR Code Badge</string>
    <string name="manage_account">Manage account</string>
...
    <string name="refresh">Refresh</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="gender">Gender</string>
...
    <string name="add_teacher">Add Teacher</string>">
    <string name="add_student">Add Student</string>">
    <string name="accept_invite">Accept Invite</string>">
    <string name="dismiss_invite">Dismiss invite</string>
    <string name="pending_requests">Pending requests</string>">
...
    <string name="share_with_link_or_qr_code">Invite with link or QR code</string>">
    <string name="share_qr_code">Share QR code</string>">
    <string name="description">Description</string>">
    <string name="unspecified">Unspecified</string>
    <string name="phone_memory">Phone memory</string>
...
    <string name="edit_clazz">Edit class</string>
    <string name="add_clazz">Add class</string>
    <string name="settings">Settings</string>
    <string name="select_class">Select Class</string>
    <string name="select_student">Select Student</string>
...
    <string name="school_directory">School Directory</string>
    <string name="lets_get_started">Let's get started</string>
    <string name="school_name">School name</string>
    <string name="school_name_placeholder">Type school name here...</string>
    <string name="i_have_an_invite_code">I have an invite code</string>
...
    <string name="signing_in">Signing in</string>
    <string name="passkey_description">A passkey is a faster and safe way to sign in than a password.Your account is created with one unless you choose another option.</string>
    <string name="sign_up">Sign-up</string>
    <string name="other_way_to_sign_in">Other way to sign-in</string>

...
    <string name="category_other">Other</string>
    <string name="error_message">Error: try again</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>

    <string name="get_started">Get Started</string>
    <string name="onboardingTitle1">Digital Library of Edtech Apps</string>
    <string name="onboardingTitle2">Works Offline and Saves Data</string>
...
    <!-- Role-Based Dimensions -->
    <string name="activity_verb">Activity Verb</string>
    <string name="user_role">Role (Teacher/Student/Parent)</string>

    <!-- Technical Dimensions -->
...
    <string name="delete">Delete</string>

    <string name="accounts">Accounts</string>
    <string name="parents_only">Parents only</string>
    <string name="continue_using_fingerprint_or">Continue using fingerprint, biometrics, or device PIN</string>

    <string name="people">People</string>
    <string name="person">Person</string>
    <string name="back">Back</string>
...
    <string name="add_person">Add person</string>
    <string name="select_person">Select person</string>
    <string name="edit_person">Edit person</string>

    <string name="first_names">First names</string>
    <string name="mappings">Mappings</string>
    <string name="mapping">Mapping</string>
    <string name="sections">Sections</string>
    <string name="section">Section</string>
    <string name="edit_mapping">Edit mapping</string>
    <string name="textbooks">Textbooks</string>
    <string name="chapter">Chapter</string>
    <string name="lesson">Lesson</string>
    <string name="add_book_cover">Add book cover</string>
    <string name="no_sections_yet">No sections have been added yet. Click + Section to add one.</string>
...
    <string name="invalid">Invalid</string>

    <string name="parent">Parent</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="system_administrator">System administrator</string>
    <string name="site_administrator">Site administrator</string>
    <string name="role">Role</string>
...

    <string name="due_date">Due date</string>
    <string name="family_members">Family members</string>
    <string name="family_member">Family member</string>
    <string name="select_family_person">Select family person</string>
