appId: world.respect.app
onFlowStart:
  - clearState: world.respect.app
  - runScript:
      file: "scripts/school_init.js"
      env:
        TESTCONTROLLER_URL: ${TESTCONTROLLER_URL}
        SCHOOL_ADMIN_PASSWORD: ${SCHOOL_ADMIN_PASSWORD}
        DIR_ADMIN_AUTH_HEADER: ${DIR_ADMIN_AUTH_HEADER}
        SCHOOL_URL: ${SCHOOL_URL}
        SCHOOL_NAME: ${SCHOOL_NAME}
        URL_SUBSTITUTION: ${URL_SUBSTITUTION}
        NAME: "001_002d_invite_existing_students_and_parent_to_join as_family_member_approval_disabled_test"

onFlowComplete:
  - runScript:
      file: "scripts/teardown.js"

---
#Admin add a users to the app and add a class named - TestClass
- runFlow: "subflows/school_admin_login_flow.yaml"

- assertVisible:
    id: "app_title"
    text: "Apps"
- runFlow:
    file: "subflows/user_add_class.yaml"
    env:
      CLASSNAME: "TestClass"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "ParentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Parent"
      USERNAME: "parentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Student"
      USERNAME: "studentauser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "StudentB"
      LASTNAME: "User"
      GENDER: "Male"
      ROLE: "Student"
      USERNAME: "studentbuser"
      PASSWORD: "test123"

- runFlow:
    file: "subflows/add_person_to_app.yaml"
    env:
      FIRSTNAME: "TeacherA"
      LASTNAME: "User"
      GENDER: "Female"
      ROLE: "Teacher"
      USERNAME: "teacherauser"
      PASSWORD: "test123"

# Admin send Family member invite to StudentA user to join ParentA User
- tapOn: "People"
- tapOn: "ParentA User"
- tapOn:
    id: "floating_action_button"
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- tapOn: "Invite person"
- assertVisible: "ParentA User / Family member"
# Approval OFF
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.studentApproveOff = maestro.copiedText}
- back
- back
- back

# Admin send Family member invite to ParentA user to join StudentB User
- tapOn: "People"
- tapOn: "StudentB User"
- tapOn:
    id: "floating_action_button"
- assertVisible:
    id: "app_title"
    text: "Edit person"
- tapOn: "Family member"
- tapOn: "Invite person"
- assertVisible: "StudentB User / Family member"
# Approval OFF
- runFlow:
    when:
      notVisible: "Approval not required until:.*"
    commands:
      - tapOn: "Approval required"
      - assertVisible: "Approval not required until:.*"
- assertVisible: "Approval not required until:.*"
- copyTextFrom:
    id: "invite_code"
- evalScript: ${output.parentApproveOff = maestro.copiedText}


#StudentA user using link to join the family member (ParentA user)
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${output.SCHOOL_URL + "respect_school_link/AcceptInvite?inviteCode=" + output.studentApproveOff}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "studentauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Student"
- assertVisible: "Family member"
- assertVisible: "ParentA User"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- assertVisible:
     id: "app_title"
     text: "ParentA User"
- assertVisible: "Family members"
- assertVisible: "StudentA User"

#ParentA user using link to join the family member (StudentB user)
- runFlow:
    file: "subflows/openlink_flow.yaml"
    env:
      URL: ${output.SCHOOL_URL + "respect_school_link/AcceptInvite?inviteCode=" + output.parentApproveOff}
- assertVisible:
    id: "app_title"
    text: "Login"
- tapOn: "Username"
- inputText: "parentauser"
- tapOn: "Password"
- inputText: "test123"
- tapOn: "Login"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- assertVisible: "Role"
- assertVisible: "Parent"
- assertVisible: "Family member"
- assertVisible: "StudentB User"
- assertVisible: "School name"
- assertVisible: ${output.SCHOOL_NAME}
- assertVisible: "School server URL"
- assertVisible: ${output.SCHOOL_URL}
- tapOn: "Accept Invite"
- assertVisible:
    id: "app_title"
    text: "StudentB User"
- assertVisible: "Family members"
- assertVisible: "ParentA User"
- tapOn: "ParentA User"
- assertVisible: "Family members"
- assertVisible: "StudentB User"
- assertVisible: "StudentA User"

# Teacher tries to join as a family member using student's invite code
- clearState: world.respect.app
- runFlow:
    file: "subflows/school_user_login_flow.yaml"
    env:
      USERNAME: "teacherauser"
      PASSWORD: "test123"
- assertVisible:
    id: "app_title"
    text: "Apps"
- tapOn:
    id: "user_account_icon"
- assertVisible:
    id: "app_title"
    text: "Accounts"
- tapOn: "Enter invite code"
- assertVisible:
    id: "app_title"
    text: "Enter invite code"
- tapOn: "Invite code"
- inputText: ${output.studentApproveOff}
- tapOn: "Next"
- assertVisible:
    id: "app_title"
    text: "Invitation"
- tapOn: "Accept Invite"
- assertVisible: "Sorry. Invalid invitation: not available for your user type."